--- a/braine/assets/css/footer.css
+++ b/braine/assets/css/footer.css
@@ -10,7 +10,7 @@
 
 .main-footer{
 	position:relative;
-	margin-top: -100px;
+	/* margin-top: -100px; */
 	background-color: var(--color-four);
 }
 
