--- a/braine/assets/css/style.css
+++ b/braine/assets/css/style.css
@@ -7823,9 +7823,12 @@
     justify-content: flex-start;
 }
 
-.steps-one .sec-title_heading {
-    line-height: 68px!important;
+@media all and (min-width:1200px){
+	.steps-one .sec-title_heading {
+		line-height: 68px!important;
+	}
 }
+
 .service-block_two-inner {
     height: 100%;
 }
@@ -7880,4 +7883,41 @@
     overflow: hidden;
     padding: 15px;
     color: #ffff;
+}
+
+
+
+/* Mobile */
+@media all and (max-width:767px){
+	.accordion-box_two .block .icon-outer .icon {
+		width: 25px;
+		height: 25px;
+		line-height: 18px;
+	}
+	
+	.accordion-box_two .block .icon-outer {
+		width: 25px;
+		height: 25px;
+		top: 20px;
+	}
+	.sec-title.style-four h2.sec-title_heading {
+		margin: 20px 0 30px;
+	}
+	.team-detail_form,
+	.contact-info,
+	.social-one,
+	.price-four,
+	.value-one,
+	.steps-one,
+	.solution-one,
+	.faq-one,
+	.testimonial-three,
+	.services-detail{
+		padding: 50px 0!important;
+	}
+	.testimonial-one .inner-container, 
+	.choose-one .inner-container {
+		padding: 20px 15px;
+	}
+	
 }
