--- a/braine/assets/css/global.css
+++ b/braine/assets/css/global.css
@@ -198,6 +198,7 @@ body {
 
 .handle-preloader{
   background-color:var(--main-color);
+  /* background: linear-gradient(to bottom, rgba(var(--main-color-rgb), 0.5) 100%, rgba(var(--white-color-rgb), 0) 100%); */
 }
 
 .handle-preloader {
@@ -596,7 +597,8 @@ img{
 	padding:18px 34px;
 	display:inline-block;
     color: var(--white-color);
-	background-color: var(--main-color);
+	/* background-color: var(--main-color); */
+	background: linear-gradient(to right, rgba(var(--main-color-rgb), 1) 0%, rgba(var(--white-color-rgb), 0) 100%);
 }
 
 .btn-style-one:before{
